--- a/BolWallet/Views/GetCertifiedPage.xaml
+++ b/BolWallet/Views/GetCertifiedPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BolWallet.Views.CertifyPage"
+             x:Class="BolWallet.Views.GetCertifiedPage"
 			 xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
 			 xmlns:helpers="clr-namespace:BolWallet.Helpers"
 			 xmlns:Converters="clr-namespace:BolWallet.Converters"
