Remove form initialization from the code behind

--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -106,7 +106,7 @@
             ("BirthCertificate", "Birth Certificate")
         ];
 
-    EncryptedCitizenshipForm form = new ();
+    EncryptedCitizenshipForm form;
 
     protected override async Task OnInitializedAsync()
     {
