Add loading at citizenships page

--- a/BolWallet/Pages/CitizenshipPage.razor
+++ b/BolWallet/Pages/CitizenshipPage.razor
@@ -4,6 +4,10 @@
 
 <MudThemeProvider/>
 
+<MudOverlay Visible="ViewModel.IsLoading" DarkBackground="true">
+    <MudProgressCircular Color="Color.Primary" Style="height:170px;width:170px;" Indeterminate="true" />
+</MudOverlay>
+
 <EditForm Model="ViewModel.citizenshipsForm" OnValidSubmit="@OnValidSubmit" >
     <DataAnnotationsValidator/>
     <MudGrid>
