--- a/BolWallet/Views/EcryptedCitizenshipPage.xaml
+++ b/BolWallet/Views/EcryptedCitizenshipPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BolWallet.Views.EcryptedCitizenshipPage"
              xmlns:pages="clr-namespace:BolWallet.Pages"
-             Title="Ecrypted Citizenship Page"
+             Title="Submit Citizenship"
              BackgroundColor="{DynamicResource SecondaryColor}">
     
     <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
